update source code fix bug for java 11 V1